pref(TomcatApplication)清理警告